# nomad-distro

./: .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile.docs  Dockerfile.gui  Makefile  README.md  docker-compose.infra.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  mkdocs.yml  plugins-values.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_docs.txt
.devcontainer/: devcontainer.json
.github/workflows/: build-app.yml  initialize.yml  update-lockfile.yml
configs/: nginx.conf
docs/: nginx.conf
examples/data/em_spctrscpy/: README.md  nxem.schema.archive.yaml
ops/kubernetes/: nomad-prod-oasis.yaml
ops/kubernetes/nomad/: values.yaml
scripts/: check_python_dependencies.sh  generate_python_dependencies.sh
